--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,22 @@
     <artifactId>selenium-java</artifactId>
     <version>2.53.0</version>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/com.comcast.magic-wand/appium -->
+    <dependency>
+    <groupId>com.comcast.magic-wand</groupId>
+    <artifactId>appium</artifactId>
+    <version>4.0.3</version>
+    </dependency>
+    
+    
+ 
+    
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.41</version>
+    </dependency>
 
     <!-- 依赖testNg -->
     <dependency>
