--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,13 @@
     <artifactId>sqlite-jdbc</artifactId>
     <version>3.16.1</version>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+   <dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+    <version>2.9.0</version>
+    </dependency>
+    
   </dependencies>
 </project>
